wb-rules-system (1.8.6) stable; urgency=medium

  * network: fix 'Active Connection Name' control, cleanup logs

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Tue, 10 Jan 2023 12:25:00 +0400

wb-rules-system (1.8.5) stable; urgency=medium

  * network: add online status and default connection controls

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Mon, 21 Nov 2022 11:05:12 +0400

wb-rules-system (1.8.4) stable; urgency=medium

  * fix error in parse DTS version (thanks alexey_a)

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Fri, 21 Oct 2022 13:20:56 +0600

wb-rules-system (1.8.3) stable; urgency=medium

  * hwmon: fix conversion warning, revert 1.8.2 changes

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Tue, 11 Oct 2022 15:36:04 +0500

wb-rules-system (1.8.2) stable; urgency=medium

  * hwmon: remove unnecessary string to int convertion (thanks nlef!)

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Thu, 15 Sep 2022 18:18:00 +0300

wb-rules-system (1.8.1) stable; urgency=medium

  * wbmz-battery: use consecutive bytes read mode to get status.
    This should fix periodic read errors which led to incorrect values
    published in Battery device

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Tue, 07 Jun 2022 23:19:07 +0300

wb-rules-system (1.8.0) stable; urgency=medium

  * add support for battery and supercap modules on WB7. It's actually
    generic sysfs power class driver, so it might eventually work with
    other boards and modules as well

 -- Evgeny Boger <boger@wirenboard.com>  Tue, 08 Feb 2022 02:54:32 +0300

wb-rules-system (1.7.0) stable; urgency=medium

  * add dependency on linux-image-wb7

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Thu, 09 Dec 2021 15:55:30 +0300

wb-rules-system (1.6.13) stable; urgency=medium

  * use deb-systemd-invoke restart wb-rules instead of service wb-rules
    restart to build rootfs properly after removing wb-rules initscript
